Fixed spacing issue with Alyssias help.

--- a/src/scss/components/_CTA.scss
+++ b/src/scss/components/_CTA.scss
@@ -3,15 +3,13 @@
 .buttons {
   visibility: hidden;
   @include respond(phone) {
-      visibility: visible;
-      background: black;
-      width: 422px;
-      height: 77px;
-      // simplify
-      border-top: 9px;
-      border-left: 6px;
-      border-right: 6px;
-      border-bottom: 25px;
+    visibility: visible;
+    background: black;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100vw;
+    padding: 25px 0px;
       // trying to anchor CTA to the bottom of the DOM
       bottom: 0;
       position: absolute;
@@ -22,27 +20,39 @@ button {
   @include respond(phone) {
     visibility: visible;
     display: inline;
+    // simplifying shared styles
+    // should be 176px
+    // width: 130px;
+    // height: 42px;
+    // border-radius: 5px;
+    // font-size: 15px;
   }
 }
   .primaryButton {
     @include respond(phone){
-      border-radius: 5px;
-      //should be 176
-      width: 130px;
-      height: 42px;
-      background: #e03a3e;
-      margin-right: 12px;
       font-size: 15px;
+      background: #e03a3e;
+      margin-right: 5px;
+
+    border-radius: 5px;
+    width: 176px;
+    height: 42px;
+    margin: 0px;
+    padding: 0px;
     }
   }
   .secondaryButton {
     @include respond(phone){
+      // added styles below to button
       border-radius: 5px;
-      width: 130px;
+      width: 176px;
       height: 42px;
+      margin: 0px;
+      padding: 0px;
       // background: white;
-      color: #e03a3e;
-      margin-left: 12px;
       font-size: 15px;
+      color: #e03a3e;
+      margin-left: 5px;
+
     }
   }
